09-Network/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: myappdp
   labels:
      app: myprodapp
spec:
  template:
    metadata:
        name: svcdeployapp # Pod name
        labels:
          app: svcdeploy #db
    spec:
      containers:
        - name: myapplication
          image: nginx # mysql
  replicas: 2
  selector:
     matchLabels:
         app: svcdeploy


## kubectl get pods
## kuebctl get pods --show-labels
## kubectl get pods -l app=myfirstapp
## kubectl get pods -l app=myfirstapp --no-headers
## kubectl get pods -l app=myfirstapp --no-headers | wc -l
## kubectl get pods -l app=myfirstapp,function=IT
