09-Network/01-deployment_copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: myappdp
   labels:
      app: myprodapp
spec:
  template:
    metadata:
        name: svcdeployapp
        labels:
          app: svcdeploy
    spec:
      containers:
        - name: myapplication
          image: nginx
  replicas: 2
  selector:
     matchLabels:
         app: svcdeploy
