09-Network/02-service_copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: svcdeploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
