09-Network/03-noselectorservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nosl-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Endpoints
metadata:
  name: my-nosl-service
subsets:
  - addresses:
      - ip: 10.44.0.31
    ports:
      - port: 80
